# python

python00/ex1/: ft_plot_area.py
python00/ex2/: ft_harvest_total.py
python00/ex3/: ft_plant_age.py
python00/ex4/: ft_water_reminder.py
python00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python00/ex6/: ft_garden_summary.py
python01/ex2/: ft_plant_growth.py
python01/ex6/: ft_garden_analytics.py
python02/ex0/: ft_first_exception.py
python02/ex1/: ft_different_errors.py
python02/ex2/: ft_custom_errors.py
python02/ex3/: ft_finally_block.py
python02/ex4/: ft_raise_errors.py
python02/ex5/: ft_garden_management.py
python03/ex0/: ft_command_quest.py
python03/ex1/: ft_score_analytics.py
python03/ex2/: ft_coordinate_system.py
python03/ex3/: ft_achievement_tracker.py
python03/ex4/: ft_inventory_system.py
python03/ex6/: ft_analytics_dashboard.py
python04/ex0/: ft_ancient_text.py
python04/ex2/: ft_stream_management.py
python04/ex4/: ft_crisis_response.py
python05/ex0/: stream_processor.py
python05/ex1/: data_stream.py
python05/ex2/: nexus_pipeline.py
python07/ex0/: Card.py  CreatureCard.py  Creaturecard.py  main.py
python07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
python07/ex2/: EliteCard.py  main.py
python07/ex3/: AggressiveStrategy.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  main.py
python07/ex4/: TournamentCard.py  TournamentPlatform.py  main.py
python08/ex0/: construct.py
python08/ex1/: loading.py  pyproject.toml  requirements.txt
python08/ex2/: .env.example  (+1 more)
(+8 files in other folders)
